--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <img
                   alt="Design Workspace"
                   class="w-full h-auto rounded-2xl object-top"
-                  src="https://readdy.ai/api/search-image?query=Modern%20UI%20UX%20design%20workspace%20with%20multiple%20screens%20showing%20design%20interfaces%2C%20clean%20minimalist%20office%20environment%20in%20Chiang%20Mai%20Thailand%2C%20natural%20lighting%2C%20contemporary%20furniture%2C%20design%20tools%20and%20sketches%20on%20desk%2C%20professional%20creative%20atmosphere%2C%20high-tech%20setup%20with%20tablets%20and%20computers%20displaying%20colorful%20user%20interface%20designs&amp;width=600&amp;height=500&amp;seq=hero-image&amp;orientation=landscape"
+                  src="image.png"
                 />
               </div>
             </div>
